<resources>
    <string name="app_name">Echelon Team Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">You</string>
    <string name="nav_header_subtitle">guest@echelonteam.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_welcome">Welcome!</string>
    <string name="action_welcome_caption">Find out what we can do!</string>
    <string name="info">Info</string>
    <string name="members">Members</string>
    <string name="projects">Projects</string>
    <string name="custom_roms">Custom ROMs</string>
    <string name="downloads">Downloads</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="contacts">Contacts</string>
    <string name="yunus_desc">Always confused with an Italian or French, this guy can change his design language five times a day.</string>
    <string name="yunusname">Yunus İşleyen | Dekamir</string>
    <string name="dev_founder">Founder, designer</string>
    <string name="enesname">Enes Şaştım | EnesSastim</string>
    <string name="ex_dev">Executive developer</string>
    <string name="enes_desc">Everyone likes this guy. He somehow built every damn custom ROM available so his name can be everywhere.</string>
    <string name="peakname">Krittin Chuaiphikroh | peaktogoo</string>
    <string name="com_web_dev">Developer, community manager, website designer</string>
    <string name="peak_desc">With such information, we don\'t know why is this guy still helping us. He\'s a good guy, but a bit annoying.</string>
    <string name="nanoname">Rudy Naddour | TheMiniDev</string>
    <string name="app_dev">App developer, designer</string>
    <string name="nano_desc">Weirdly known by every member, his qualifying features is that he\'s goddamn fast. Really.</string>
    <string name="reshitname">Reşit Menekşe | TGPResit</string>
    <string name="com_de_dev">Community manager, designer</string>
    <string name="reshit_desc">Saw weird stickers constantly? It\'s probably this guy. He can shitpost 24/7. We\'re trying to slow him down.</string>
    <string name="developer">Developer who develops things</string>
</resources>
