<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/Info"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/info" />
        <item
            android:id="@+id/Members"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/members" />
        <item
            android:id="@+id/Projects"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/projects" />
        <item
            android:id="@+id/Custom_ROMs"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/custom_roms" />
        <item
            android:id="@+id/Downloads"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/downloads" />
        <item
            android:id="@+id/Wallpapers"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/wallpapers" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/Contacts"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contacts" />
        </menu>
    </item>

</menu>
