<?xml version="1.0" encoding="utf-8"?>

 <!--   <LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipChildren="false"
    android:background="@color/background">
   <com.alespero.expandablecardview.ExpandableCardView
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:layout_marginTop="10dp"
       android:layout_marginBottom="10dp"
        android:id="@+id/yunus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/yunusname"
        app:icon="@drawable/ic_menu_send"
        app:inner_view="@layout/desc_yunus"
        app:expandOnClick="true"
        app:animationDuration="300"
        app:startExpanded="false"/>
    <com.alespero.expandablecardview.ExpandableCardView
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/enes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/enesname"
        app:icon="@drawable/ic_menu_send"
        app:inner_view="@layout/desc_enes"
        app:expandOnClick="true"
        app:animationDuration="300"
        app:startExpanded="false"/>
    <com.alespero.expandablecardview.ExpandableCardView
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/nano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/nanoname"
        app:icon="@drawable/ic_menu_send"
        app:inner_view="@layout/desc_nano"
        app:expandOnClick="true"
        app:animationDuration="300"
        app:startExpanded="false"/>
    <com.alespero.expandablecardview.ExpandableCardView
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/peaktogoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/peakname"
        app:icon="@drawable/ic_menu_send"
        app:inner_view="@layout/desc_peak"
        app:expandOnClick="true"
        app:animationDuration="300"
        app:startExpanded="false"/>
    <com.alespero.expandablecardview.ExpandableCardView
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/tgpresit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/reshitname"
        app:icon="@drawable/ic_menu_send"
        app:inner_view="@layout/desc_reshit"
        app:expandOnClick="true"
        app:animationDuration="300"
        app:startExpanded="false"/>

</LinearLayout> !-->
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CardView.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/primary_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/yunusname"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="#DE000000"
            app:layout_constraintEnd_toStartOf="@+id/media_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sub_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dev_founder"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#8A000000"
            app:layout_constraintEnd_toStartOf="@+id/media_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/primary_text" />

        <ImageView
            android:id="@+id/media_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_yunus" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/action_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:minWidth="0dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="#DE000000"
            android:text="@string/info"
            app:layout_constraintTop_toBottomOf="@+id/media_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>